# PowerEngine

./: .gitignore  README.md
!_PowerEngine/!_DX_11_ver/: desktop.ini
!_PowerEngine/!_DX_11_ver/PowerEngine/: CMakeLists.txt  CMakePresets.json
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/: CMakeLists.txt
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Core/: Logger.cpp  Logger.h  Timer.cpp  Timer.h
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Input/: GamepadManager.cpp  GamepadManager.h  InputManager.cpp  InputManager.h
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Platform/: Window.cpp  Window.h
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Renderer/: Camera2D.cpp  Font.cpp  Font.h  RenderContext.cpp  RenderContext.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Renderer/2D/: Camera2D.h  Font.h  Renderer2D.h
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Renderer/3D/: Camera3D.cpp  Camera3D.h  Grid.cpp  Grid.h  Light.h  Mesh.cpp  Mesh.h  Renderer3D.cpp  Renderer3D.h
!_PowerEngine/!_DX_11_ver/PowerEngine/Engine/Renderer/Shaders/: Grid.hlsl  Mesh.hlsl  Polygon.hlsl  Quad.hlsl
!_PowerEngine/!_DX_11_ver/PowerEngine/Sandbox/: CMakeLists.txt  main.cpp
